--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
             <ul class="mobile-nav">
                 <li class="{{ homeactive }}"><a href="/">Главная</a></li>
                 <li class="{{ priceactive }}"><a href="{% url 'services' %}">Цены и сроки</a></li>
-                <li class="{{ postsactive }}"><a href="{% url 'allposts' %}">Статьи</a></li>
+                <li class="{{ postsactive }}"><a href="https://ede74.ru/posts/">Статьи</a></li>
                 <li class="{{ homeactive }}"><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
                 <li class="{{ homeactive }}"><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
                 <li class="{{ contactactive }}"><a href="{% url 'contacts' %}">Контакты</a></li>
@@ -32,7 +32,7 @@
         <ul class="nav">
            <li class="{{ homeactive }}"><a href="/">Главная</a></li>
                 <li class="{{ priceactive }}"><a href="{% url 'services' %}">Цены и сроки</a></li>
-                <li class="{{ postsactive }}"><a href="{% url 'allposts' %}">Статьи</a></li>
+                <li class="{{ postsactive }}"><a href="https://ede74.ru/posts/">Статьи</a></li>
                 <li class="{{ homeactive }}"><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
                 <li class="{{ homeactive }}"><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
                 <li class="{{ contactactive }}"><a href="{% url 'contacts' %}">Контакты</a></li>
