--- a/templates/header_index.html
+++ b/templates/header_index.html
@@ -39,7 +39,7 @@
             <ul class="mobile-nav">
                 <li class="active"><a href="/">Главная</a></li>
                 <li><a href="{% url 'services' %}">Цены и сроки</a></li>
-                <li><a href="{% url 'allposts' %}">Статьи</a></li>
+                <li><a href="https://ede74.ru/posts/">Статьи</a></li>
                 <li><a href="#reviews" class="not-visible-sm">Отзывы</a></li>
                 <li><a href="#about" class="not-visible-sm">О нас</a></li>
                  <li><a href="{% url 'contacts' %}">Контакты</a></li>
@@ -51,7 +51,7 @@
         <ul class="nav">
             <li class="active"><a href="/">Главная</a></li>
             <li><a href="{% url 'services' %}">Цены и сроки</a></li>
-            <li><a href="{% url 'allposts' %}">Статьи</a></li>
+            <li><a href="https://ede74.ru/posts/">Ста1тьи</a></li>
             <li><a href="#reviews" class="not-visible-sm">Отзывы</a></li>
             <li><a href="#about" class="not-visible-sm">О нас</a></li>
              <li><a href="{% url 'contacts' %}">Контакты</a></li>
