--- a/static/sass/_common.sass
+++ b/static/sass/_common.sass
@@ -209,3 +209,119 @@ h5
     margin-bottom: 15px
   p
     margin-bottom: 10px
+
+
+.faq
+  margin-bottom: 100px
+  &-wrapper
+    display: grid
+    grid-template-columns: repeat(auto-fill,minmax(500px,1fr))
+    grid-gap: 30px
+  &-item
+    &-question
+      background: $color_yellow
+      border-top-right-radius: 10px
+      border-top-left-radius: 10px
+      padding: 10px 10px
+      p
+        font: 20px 'MuseoSansCyrl-500',sans-serif
+        color: $color_text
+    &-answer
+      border: 1px solid $color_border
+      border-top: none
+      padding: 15px 10px
+      border-bottom-right-radius: 10px
+      border-bottom-left-radius: 10px
+
+.trust
+  margin-bottom: 100px
+  h3
+    position: relative
+    display: inline-block
+    z-index: 1
+    &::after
+      z-index: -1
+      position: absolute
+      content: ''
+      width: 100%
+      height: 3px
+      bottom: 8px
+      left: 0
+      background: $color_yellow
+  &-wrapper
+    display: grid
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr))
+    grid-gap: 30px
+  &-item
+    border-radius: 10px
+    background: $color_yellow
+    display: flex
+    align-items: center
+    padding: 20px
+    img
+      margin-right: 20px
+      width: 100px
+      height: 100px
+    p
+      font: 16px 'MuseoSansCyrl-500',sans-serif
+      color: $color_text
+
+.compare
+  margin-bottom: 100px
+  h3
+    position: relative
+    display: inline-block
+    z-index: 1
+    &::after
+      z-index: -1
+      position: absolute
+      content: ''
+      width: 100%
+      height: 3px
+      bottom: 8px
+      left: 0
+      background: $color_yellow
+  &-wrapper
+    display: grid
+    grid-template-columns: repeat(auto-fill,minmax(500px,1fr))
+    grid-gap: 30px
+  &-item
+    &-header
+      background: $color_yellow
+      border-top-right-radius: 10px
+      border-top-left-radius: 10px
+      padding: 10px 10px
+      text-align: center
+      p
+        font: 20px 'MuseoSansCyrl-500',sans-serif
+        color: $color_text
+        text-transform: uppercase
+    &-list
+      min-height: 200px
+      border: 1px solid $color_border
+      border-top: none
+      padding: 15px 10px
+      border-bottom-right-radius: 10px
+      border-bottom-left-radius: 10px
+      ul
+        li
+          position: relative
+          margin-bottom: 15px
+          margin-left: 20px
+          &:last-child
+            margin-bottom: 0
+          &::before
+            position: absolute
+            font-size: 20px
+            font-weight: bold
+            line-height: 0
+            top: 8px
+            left: -20px
+
+          &.bad::before
+            content: "\2212"
+            color: red
+          &.good::before
+            content: "\002B"
+            color: green
+
